--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/babel-plugin": "^11.7.2",
+    "@emotion/react": "^11.8.2",
     "next": "12.1.2",
     "react": "18.0.0",
     "react-dom": "18.0.0"
